--- a/src/assets/style/base.css
+++ b/src/assets/style/base.css
@@ -21,19 +21,19 @@
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
 
   --background-light: #ffffff;
-  --background-dark: rgb(16, 16, 16);
+  --background-dark: #00000040;
 
   --background-1-light: rgb(211, 211, 211);
   --background-2-light: rgb(169, 169, 169);
 
-  --background-1-dark: rgb(32, 32, 32);
-  --background-2-dark: rgb(64, 64, 64);
+  --background-1-dark: #130922;
+  --background-2-dark: #2d1f40;
 
   --text-light: rgb(16, 16, 16);
   --text-light-link: rgb(128, 128, 128);
 
   --text-dark: rgb(255, 255, 255);
-  --text-dark-link: rgb(128, 128, 128);
+  --text-dark-link: rgb(110, 89, 134);
 }
 
 /* semantic color variables for this project */
@@ -85,7 +85,12 @@
 body {
   min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background-2);
+
+  background-color: var(--color-background);
+  /*background-image: linear-gradient(top, #000 0%, var(--color-background) 100vh);
+  background-image: -moz-linear-gradient(top, #000 0%, var(--color-background) 100vh);*/
+  background-image: -webkit-linear-gradient(top, var(--color-background) 0%, var(--color-background) 100vh);
+  
   line-height: 1.6;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -93,5 +98,4 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
 }
