--- a/src/assets/style/base.css
+++ b/src/assets/style/base.css
@@ -1,72 +1,16 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --vt-c-white: #ffffff;
-  --vt-c-white-soft: #f8f8f8;
-  --vt-c-white-mute: #f2f2f2;
+  --color-background: #00000040;
+  --color-background-1: #1b1425;
+  --color-background-2: #2d1f40;
 
-  --vt-c-black: #181818;
-  --vt-c-black-soft: #222222;
-  --vt-c-black-mute: #282828;
+  --color-border: rgb(108, 93, 126);
+  --color-border-hover: rgb(108, 93, 126);
 
-  --vt-c-indigo: #2c3e50;
+  --color-heading: rgb(255, 255, 255);
+  --color-text: rgb(255, 255, 255);
 
-  --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
-  --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
-  --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
-  --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
-
-  --vt-c-text-light-1: var(--vt-c-indigo);
-  --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
-  --vt-c-text-dark-1: var(--vt-c-white);
-  --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
-
-  --background-light: #ffffff;
-  --background-dark: #00000040;
-
-  --background-1-light: rgb(211, 211, 211);
-  --background-2-light: rgb(169, 169, 169);
-
-  --background-1-dark: #130922;
-  --background-2-dark: #2d1f40;
-
-  --text-light: rgb(16, 16, 16);
-  --text-light-link: rgb(128, 128, 128);
-
-  --text-dark: rgb(255, 255, 255);
-  --text-dark-link: rgb(110, 89, 134);
-}
-
-/* semantic color variables for this project */
-:root {
-  --color-background: var(--background-light);
-  --color-background-1: var(--background-1-light);
-  --color-background-2: var(--background-2-light);
-
-  --color-border: var(--text-light-link);
-  --color-border-hover: var(--text-light-link);
-
-  --color-heading: var(--text-light);
-  --color-text: var(--text-light);
-
-  --color-text-link: var(--text-light-link);
-
-  --section-gap: 160px;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-background: var(--background-dark);
-    --color-background-1: var(--background-1-dark);
-    --color-background-2: var(--background-2-dark);
-
-    --color-border: var(--text-dark-link);
-    --color-border-hover: var(--text-dark-link);
-
-    --color-heading: var(--text-dark);
-    --color-text: var(--text-dark);
-
-    --color-text-link: var(--text-dark-link);
-  }
+  --color-text-link: rgb(108, 93, 126);
 }
 
 *,
@@ -87,9 +31,6 @@ body {
   color: var(--color-text);
 
   background-color: var(--color-background);
-  /*background-image: linear-gradient(top, #000 0%, var(--color-background) 100vh);
-  background-image: -moz-linear-gradient(top, #000 0%, var(--color-background) 100vh);*/
-  background-image: -webkit-linear-gradient(top, var(--color-background) 0%, var(--color-background) 100vh);
   
   line-height: 1.6;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
