--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -8,7 +8,7 @@ $display-font-weight: 700;
 
 $navbar-nav-link-padding-x: $spacer;
 
-$primary: #231a30;
+$primary: #2d213d;
 $secondary: #442c66;
 $tertiary: #00000080;
 $body-color: #090910;
